[package]
name = "appbiotic-data-url-resource"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde", "tokio"]
serde = [
    "serde/derive",
    "serde/std",
    "dep:serde_with",
    "duration-str/serde",
    "url/serde",
]
tokio = [
    "tokio/fs",
    "tokio/io-util",
    "tokio/macros",
    "tokio/sync",
    "tokio/time",
    "tokio-stream/sync",
]

[dependencies]
async-trait = "0.1.80"
bytes = "1.6.0"
derive-new = "0.6.0"
duration-str = { version = "0.11.2", features = ["time"] }
serde = { version = "1.0.203", optional = true, default-features = false }
serde_with = { version = "3.8.1", optional = true, default-features = false }
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.4"
thiserror = "1.0.61"
tokio = { version = "1.38.0", optional = true, default-features = false }
tokio-stream = "0.1.15"
tracing = "0.1.40"
url = { version = "2.5.1" }

[dev-dependencies]
tempdir = "0.3.7"
tokio = { version = "1.38.0", features = ["rt", "test-util"] }
tracing-test = "0.2.5"
