[package]
name = "appbiotic-api-secrets-onepassword-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.82", features = ["std"] }
appbiotic-api-secrets-onepassword = { version = "0.1.0", path = "../onepassword", features = [
    "async",
] }
appbiotic-api-secrets-onepassword-client = { version = "0.1.0", path = "../onepassword-client", features = [
    "tokio",
] }
clap = { version = "4.5.4", features = [
    "cargo",
    "default",
    "derive",
    "env",
    "string",
] }
rustyline = { version = "14.0.0", default-features = false }
serde_json = { version = "1.0.116", features = ["std"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
