[package]
name = "appbiotic-api-secrets-onepassword-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["tokio"]
tokio = [
    "dep:async-trait",
    "appbiotic-api-secrets-onepassword/async",
    "tokio/io-std",
    "tokio/io-util",
    "tokio/process",
    "tokio/macros",
    "tokio/rt",
]

[dependencies]
appbiotic-api-secrets-onepassword = { version = "0.1.0", path = "../onepassword", features = [
    "serde",
] }
async-trait = { version = "0.1.80", default-features = false, optional = true }
serde = { version = "1.0.198", features = ["std"] }
serde_json = { version = "1.0.116", features = ["std"] }
tokio = { version = "1.37.0", optional = true }
