[package]
name = "appbiotic-api-secrets-onepassword"
version = "0.1.0"
edition = "2021"

[features]
default = ["async", "serde"]
async = ["dep:async-trait"]
serde = [
    "serde/derive",
    "serde/std",
    "chrono/serde",
    "serde_with/base64",
    "serde_with/macros",
]


[dependencies]
async-trait = { version = "0.1.80", default-features = false, optional = true }
chrono = { version = "0.4.38", default-features = false }
base64 = { version = "0.22.1", optional = true, default-features = false }
derive-new = { version = "0.6.0", default-features = false }
serde = { version = "1.0.198", optional = true, default-features = false }
serde_with = { version = "3.7.0", optional = true, default-features = false }
thiserror = { version = "1.0.59", default-features = false }

[dev-dependencies]
base64 = { version = "0.22.1", features = ["std"] }
serde_json = { version = "1.0.116", features = ["std"] }
